feat: enhance clipboard crates with image conversion and rate limiting
lamco-clipboard-core:
- Add 'image' feature with PNG/JPEG/BMP/GIF ↔ DIB conversion
- Add rate limiting option to LoopDetector (opt-in via config)
- New methods: is_rate_limited(), should_skip_sync(), record_sync()

Workspace:
- Update IronRDP to git master (commit b50b6483) pending crate release
- Add architecture decision document for clipboard refactoring

The image module handles Windows DIB format conversion for clipboard
images, including proper BITMAPINFOHEADER handling, BGRA/RGBA conversion,
and row alignment for 24-bit images.

Rate limiting provides belt-and-suspenders protection against clipboard
sync storms, disabled by default to avoid breaking existing behavior.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,9 +40,10 @@ image = { version = "0.25", default-features = false }
 # Encoding
 percent-encoding = "2"
 
-# IronRDP
-ironrdp-cliprdr = "0.4"
-ironrdp-core = "0.1"
+# IronRDP (using git until new crate version is published)
+# TODO: Switch back to crates.io version when ironrdp-cliprdr 0.5+ is published
+ironrdp-cliprdr = { git = "https://github.com/Devolutions/IronRDP", branch = "master" }
+ironrdp-core = { git = "https://github.com/Devolutions/IronRDP", branch = "master" }
 
 # =============================================================================
 # Meta-crate configuration (lamco-rdp)
