--- a/crates/lamco-clipboard-core/Cargo.toml
+++ b/crates/lamco-clipboard-core/Cargo.toml
@@ -23,6 +23,7 @@ maintenance = { status = "actively-developed" }
 
 [features]
 default = []
+image = ["dep:image", "dep:bytes"]
 
 [lints]
 workspace = true
@@ -31,5 +32,9 @@ workspace = true
 sha2 = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
+
+# Optional dependencies for image conversion
+image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
+bytes = { version = "1.5", optional = true }
 
 [dev-dependencies]
