--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,10 +40,10 @@ image = { version = "0.25", default-features = false }
 # Encoding
 percent-encoding = "2"
 
-# IronRDP (using git until new crate version is published)
-# TODO: Switch back to crates.io version when ironrdp-cliprdr 0.5+ is published
-ironrdp-cliprdr = { git = "https://github.com/Devolutions/IronRDP", branch = "master" }
-ironrdp-core = { git = "https://github.com/Devolutions/IronRDP", branch = "master" }
+# IronRDP (using git master for latest fixes)
+# Publishing note: git spec is removed when publishing, uses crates.io version
+ironrdp-cliprdr = { version = "0.4", git = "https://github.com/Devolutions/IronRDP", branch = "master" }
+ironrdp-core = { version = "0.1.5", git = "https://github.com/Devolutions/IronRDP", branch = "master" }
 
 # =============================================================================
 # Meta-crate configuration (lamco-rdp)
