--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,8 @@ image = { version = "0.25", default-features = false }
 percent-encoding = "2"
 
 # IronRDP (using git master for latest fixes)
-# Publishing note: git spec is removed when publishing, uses crates.io version
+# CI will fail version resolution - this is expected until IronRDP publishes 0.5.0
+# When publishing our crates, cargo uses crates.io versions and ignores git spec
 ironrdp-cliprdr = { version = "0.4", git = "https://github.com/Devolutions/IronRDP", branch = "master" }
 ironrdp-core = { version = "0.1.5", git = "https://github.com/Devolutions/IronRDP", branch = "master" }
 
