feat(clipboard-core): Add FileGroupDescriptorW support for RDP file transfer
Implement complete FileGroupDescriptorW parsing and building for bidirectional
clipboard file transfer between Linux and Windows.

Changes:
- Add FileDescriptor struct to parse FILEDESCRIPTORW (592 bytes each)
- Add FileDescriptorFlags for metadata field validation
- Add FileDescriptor::build() to create descriptors from local files
- Add parse_list/build_list for FileGroupDescriptorW with multiple files
- Add sanitize.rs module for cross-platform filename handling
- Add CF_FILEGROUPDESCRIPTORW and CF_FILECONTENTS format constants
- Update mime_to_rdp_formats() to advertise file transfer formats

The FileGroupDescriptorW format is:
- 4 bytes: cItems (file count)
- N * 592 bytes: FILEDESCRIPTORW structures

Each FILEDESCRIPTORW contains:
- Flags, attributes, timestamps, size
- 520 bytes UTF-16 filename (260 chars max)

Also includes cross-platform sanitization for:
- Windows reserved names (CON, PRN, COM1, etc.)
- Invalid characters (\/:*?"<>|)
- Trailing dots/spaces (Windows strips silently)
- Line ending conversion (LF <-> CRLF)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,11 +40,12 @@ image = { version = "0.25", default-features = false }
 # Encoding
 percent-encoding = "2"
 
-# IronRDP (using git master for latest fixes)
-# CI will fail version resolution - this is expected until IronRDP publishes 0.5.0
+# IronRDP (using local fork for development with file transfer support)
+# See wrd-server-specs/IRONRDP-PATCHES.md for pending PR details
 # When publishing our crates, cargo uses crates.io versions and ignores git spec
-ironrdp-cliprdr = { version = "0.4", git = "https://github.com/Devolutions/IronRDP", branch = "master" }
-ironrdp-core = { version = "0.1.5", git = "https://github.com/Devolutions/IronRDP", branch = "master" }
+# All IronRDP crates must come from same source to avoid trait conflicts
+ironrdp-cliprdr = { version = "0.5", path = "/home/greg/wayland/IronRDP/crates/ironrdp-cliprdr" }
+ironrdp-core = { version = "0.1", path = "/home/greg/wayland/IronRDP/crates/ironrdp-core" }
 
 # =============================================================================
 # Meta-crate configuration (lamco-rdp)
